# mateversum

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  blit.spv  compile_shaders.sh  deny.toml  flat_colour.spv  fragment.spv  fragment_alpha_clipped.spv  fullscreen_tri.spv  line_vertex.spv  run.sh  rust-toolchain.toml  vertex.spv
.cargo/: config
compiled-shaders/: bc6.spv  blit.spv  flat_blue.spv  flat_colour.spv  fragment.spv  fragment_alpha_clipped.spv  fragment_skybox.spv  fragment_ui.spv  fragment_unlit.spv  fragment_unlit_alpha_clipped.spv  fullscreen_tri.spv  line_vertex.spv  single_view_fragment.spv  single_view_fragment_alpha_clipped.spv  single_view_line_vertex.spv  single_view_tonemap.spv  single_view_vertex.spv  single_view_vertex_mirrored.spv  single_view_vertex_skybox.spv  single_view_vertex_skybox_mirrored.spv  tonemap.spv  vertex.spv  vertex_mirrored.spv  vertex_skybox.spv  vertex_skybox_mirrored.spv
gltf-helpers/: Cargo.toml
gltf-helpers/src/: animation.rs  lib.rs
granite-shaders/: README.md  a.spv  bc6.frag  bitextract.h
networking-js/: .gitignore  globals.js  index.js  notes.md  package-lock.json  package.json
renderer-core/: Cargo.toml
renderer-core/src/: assets.rs  bind_group_layouts.rs  buffers.rs  caching.rs  ibl.rs  instance.rs  lib.rs  pipelines.rs  utils.rs
renderer-core/src/assets/: materials.rs  models.rs  textures.rs
shaders/: Cargo.toml  deny.toml
shaders/src/: lib.rs  single_view.rs
shared-structs/: Cargo.toml
shared-structs/src/: lib.rs
src/: assets.rs  buffers.rs  caching.rs  js_helpers.rs  lib.rs  main.rs  old.rs  pipelines.rs
src/assets/: deprecated.rs  request_client.rs
superconductor/: Cargo.toml
superconductor/src/: components.rs  lib.rs  systems.rs  utils.rs
superconductor/src/systems/: rendering.rs
vrm-gltf/: Cargo.toml
vrm-gltf/src/: lib.rs
web/: Caddyfile  index.html  ipfs_demo.json  mate.py  mates.json  networking.js  new_sponza.json  sample_models  sponza_with_mirror.json  trystero_bundled.js
web/environment_maps/: forest_diffuse_cubemap_lambertian.ktx2  forest_lut.ktx2  lut_ggx.ktx2
web/environment_maps/helipad/: diffuse_compressed.ktx2
web/mirror/: mirror.blend  mirror.gltf  mirror_inner.gltf  rim.gltf
web/ui/: ui_plane.blend  ui_plane.gltf
