[package]
name = "mateversum"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
wasm-web-helpers = { git = "https://github.com/expenses/kiss-engine", branch = "working-on-real-hw" }
log = "0.4.16"
wasm-bindgen-futures = "0.4.30"
wgpu = { version = "0.12.0", features = ["webgl", "spirv"] }
futures = "0.3.21"
gltf = "1.0.0"
gltf-helpers = { git = "https://github.com/expenses/kiss-engine", branch = "working-on-real-hw" }
glam = "0.20.5"
bytemuck = { version = "1.9.1", features = ["derive"] }
image = { version = "0.24.1", default-features = false, features = ["jpeg", "png"] }
shared-structs = { path = "shared-structs" }
glow = "0.11.2"
wgpu-hal = "0.12.0"
base64 = "0.13.0"
js-sys = "0.3.57"
url = { git = "https://github.com/expenses/rust-url", branch = "set-scheme-unchecked", features = ["serde"] }
ktx2 = { git = "https://github.com/expenses/ktx2", branch = "expose-more" }
crevice = { git = "https://github.com/LPGhatguy/crevice", features = ["glam"] }
wasm-bindgen = { version = "0.2.80", features = ["enable-interning"] }
wasm-webxr-helpers = { git = "https://github.com/expenses/wasm-webxr-helpers" }
basis-universal-wasm = { git = "https://github.com/expenses/basis-universal-rs-wasm" }
elsa = "1.7.0"
anyhow = "1.0.57"
basis-universal = { git = "https://github.com/expenses/basis-universal-rs" }
zstd = { version = "0.11.1", default-features = false, features = ["wasm"] }
wasm-futures-executor = { git = "https://github.com/expenses/wasm-futures-executor", branch = "unbounded" }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"

[dependencies.web-sys]
version = "0.3.36"
features = [
  'Document',
  'Element',
  'Gpu',
  'Headers',
  'HtmlCanvasElement',
  'Navigator',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'WebGl2RenderingContext',
  'Window',
  'XrBoundedReferenceSpace',
  'XrEye',
  'XrFrame',
  'XrHandedness',
  'XrInputSource',
  'XrInputSourceArray',
  'XrInputSourceEvent',
  'XrInputSourceEventInit',
  'XrInputSourcesChangeEvent',
  'XrPose',
  'XrReferenceSpace',
  'XrReferenceSpaceEvent',
  'XrReferenceSpaceEventInit',
  'XrReferenceSpaceType',
  'XrRenderState',
  'XrRenderStateInit',
  'XrRigidTransform',
  'XrSession',
  'XrSessionEvent',
  'XrSessionEventInit',
  'XrSessionInit',
  'XrSessionMode',
  'XrSpace',
  "XrSystem",
  'XrTargetRayMode',
  'XrView',
  'XrViewerPose',
  'XrViewport',
  'XrVisibilityState',
  'XrWebGlLayer',
  'XrWebGlLayerInit',
  'console',
  "HtmlButtonElement",
  'HtmlVideoElement',
  'DomPointReadOnly',
  'ReadableStream',
  'XrInputSourceArray',
  'RtcDataChannel',
  'MessageEvent',
  'CacheStorage',
  'Cache',
  'ResponseInit',
  'HtmlBrElement',
]

[patch.crates-io]
web-sys = { git = "https://github.com/expenses/wasm-bindgen", branch = "webxr-fixes" }
wasm-bindgen = { git = "https://github.com/expenses/wasm-bindgen", branch = "webxr-fixes" }
wasm-bindgen-shared = { git = "https://github.com/expenses/wasm-bindgen", branch = "webxr-fixes" }
js-sys = { git = "https://github.com/expenses/wasm-bindgen", branch = "webxr-fixes" }
glow = { git = "https://github.com/expenses/glow", branch = "web-sys-bind-raw-framebuffer" }
wgpu = { git = "https://github.com/expenses/wgpu", branch = "webxr" }
wgpu-hal = { git = "https://github.com/expenses/wgpu", branch = "webxr" }

[workspace]
members = [
  ".",
  "shared-structs",
  "shaders",
  "rust-gpu-cli-builder",
]
