[package]
name = "mateversum"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
log = "0.4.17"
wasm-bindgen-futures = "0.4.30"
futures = { version = "0.3.21", default-features = false }
gltf = {  git = "https://github.com/expenses/gltf", branch = "third-party-extensions", features = ["KHR_materials_unlit"], default-features = false }
gltf-helpers = { path = "gltf-helpers" }
glam = "0.20.5"
bytemuck = { version = "1.9.1", features = ["derive"] }
image = { version = "0.24.2", default-features = false, features = ["jpeg", "png"] }
shared-structs = { path = "shared-structs" }
glow = "0.11.2"
wgpu = { version = "0.12.0", features = ["spirv"] }
wgpu-hal = { git = "https://github.com/expenses/wgpu", branch = "webxr-more-extensions" }
base64 = "0.13.0"
js-sys = "0.3.57"
url = { version = "2.2.2", features = ["serde"] }
ktx2 = { git = "https://github.com/BVE-Reborn/ktx2" }
crevice = { version = "0.10.0", features = ["glam"] }
wasm-bindgen = { version = "0.2.80", features = ["enable-interning", "serde-serialize"] }
basis-universal-wasm = { git = "https://github.com/expenses/basis-universal-rs-wasm" }
elsa = "1.7.0"
anyhow = "1.0.57"
basis-universal = { git = "https://github.com/expenses/basis-universal-rs", branch = "wasm-support" }
zstd = { version = "0.11.2", default-features = false, features = ["wasm"] }
wasm-futures-executor = { git = "https://github.com/wngr/wasm-futures-executor" }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
egui-wgpu = { git = "https://github.com/expenses/egui", branch = "fixes" }
egui = { git = "https://github.com/expenses/egui", branch = "fixes" }
slotmap = "1.0.6"
range-alloc = { git = "https://github.com/expenses/gfx", branch = "range-allocator" }
raw-window-handle = "0.4.3"
renderer-core = { path = "renderer-core" }

[dependencies.web-sys]
version = "0.3.57"
features = [
  'Document',
  'Element',
  'Gpu',
  'Headers',
  'HtmlCanvasElement',
  'Navigator',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'WebGl2RenderingContext',
  'Window',
  'XrBoundedReferenceSpace',
  'XrEye',
  'XrFrame',
  'XrHandedness',
  'XrInputSource',
  'XrInputSourceArray',
  'XrInputSourceEvent',
  'XrInputSourceEventInit',
  'XrInputSourcesChangeEvent',
  'XrPose',
  'XrReferenceSpace',
  'XrReferenceSpaceEvent',
  'XrReferenceSpaceEventInit',
  'XrReferenceSpaceType',
  'XrRenderState',
  'XrRenderStateInit',
  'XrRigidTransform',
  'XrSession',
  'XrSessionEvent',
  'XrSessionEventInit',
  'XrSessionInit',
  'XrSessionMode',
  'XrSpace',
  "XrSystem",
  'XrTargetRayMode',
  'XrView',
  'XrViewerPose',
  'XrViewport',
  'XrVisibilityState',
  'XrWebGlLayer',
  'XrWebGlLayerInit',
  'console',
  "HtmlButtonElement",
  'HtmlVideoElement',
  'DomPointReadOnly',
  'ReadableStream',
  'XrInputSourceArray',
  'RtcDataChannel',
  'MessageEvent',
  'CacheStorage',
  'Cache',
  'ResponseInit',
  'HtmlBrElement',
  'DomPointInit',
  'Gamepad',
  'Location'
]

[features]
default = ["webgl", "thread_pool"]
thread_pool = []
webgl = ["wgpu/webgl"]

[patch.crates-io]
web-sys = { git = "https://github.com/expenses/wasm-bindgen", branch = "gamepad-without-webgpu-update" }
wasm-bindgen = { git = "https://github.com/expenses/wasm-bindgen", branch = "gamepad-without-webgpu-update" }
wasm-bindgen-shared = { git = "https://github.com/expenses/wasm-bindgen", branch = "gamepad-without-webgpu-update" }
js-sys = { git = "https://github.com/expenses/wasm-bindgen", branch = "gamepad-without-webgpu-update" }
glow = { git = "https://github.com/expenses/glow", branch = "webxr" }
wgpu = { git = "https://github.com/expenses/wgpu", branch = "webxr-more-extensions" }
wgpu-hal = { git = "https://github.com/expenses/wgpu", branch = "webxr-more-extensions" }

[patch.'https://github.com/gfx-rs/naga']
naga = { git = "https://github.com/expenses/naga", branch = "webxr" }

[workspace]
members = [
  ".",
  "shared-structs",
  "gltf-helpers",
  "renderer-core",
  "superconductor",
]
