[package]
name = "gltf-helpers"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
bytemuck = { version = "1.9.1", features = ["derive"] }
glam = { version = "0.20.3", features = ["bytemuck"] }
gltf = { git = "https://github.com/expenses/gltf", branch = "third-party-extensions", features = ["utils", "names"], default-features = false }
log = "0.4.16"
ordered-float = "2.10.0"
