[package]
name = "renderer-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raw-window-handle = "0.4.3"
wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"] }
glow = "0.11.2"
wgpu = { version = "0.12.0", features = ["webgl"] }
wgpu-hal = { git = "https://github.com/expenses/wgpu", branch = "webxr-more-extensions" }

[dependencies.web-sys]
version = "0.3.57"
features = [
    "XrSession",
    "XrFrame",
    "HtmlCanvasElement",
    "WebGl2RenderingContext"
]
