[package]
name = "renderer-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raw-window-handle = "0.4.3"
wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"] }
glow = "0.11.2"
wgpu = { version = "0.12.0", features = ["spirv", "webgl"] }
wgpu-hal = { git = "https://github.com/expenses/wgpu", branch = "webxr-more-extensions" }
log = "0.4.17"
glam = { version = "0.20", features = ["bytemuck"] }
shared-structs = { path = "../shared-structs" }
bytemuck = { version = "1.9.1", features = ["derive"] }
crevice = "0.10.0"
ktx2 = { git = "https://github.com/BVE-Reborn/ktx2" }
zstd = { version = "0.11.2", default-features = false, features = ["wasm"] }
anyhow = "1.0.58"
url = "2.2.2"
wasm-bindgen-futures = "0.4.31"
gltf = {  git = "https://github.com/expenses/gltf", branch = "third-party-extensions", features = ["KHR_materials_unlit"], default-features = false }
gltf-helpers = { path = "../gltf-helpers" }
base64 = "0.13.0"
range-alloc = { git = "https://github.com/expenses/gfx", branch = "range-allocator" }
parking_lot = "0.12.1"
image = { version = "0.24.2", default-features = false, features = ["jpeg", "png"] }

[dependencies.web-sys]
version = "0.3.57"
features = [
    "XrSession",
    "XrFrame",
    "HtmlCanvasElement",
    "WebGl2RenderingContext",
    "XrRigidTransform",
    "DomPointReadOnly",
]
