[package]
name = "shaders"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["dylib", "lib"]

[dependencies]
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu", features = ["glam"] }
glam-pbr = { git = "https://github.com/expenses/glam-pbr" }
shared-structs = { path = "../shared-structs" }

[workspace]
