[package]
name = "shared-structs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { version = "0.20.5", features = ["libm"], default-features = false }

[target.'cfg(not(target_arch = "spirv"))'.dependencies]
crevice = { git = "https://github.com/LPGhatguy/crevice", features = ["glam"] }
